Full commit for the APIs worked on